--- a/formulas/errors.html
+++ b/formulas/errors.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Right to left display - Working with the rust_xlsxwriter library</title>
+        <title>Dealing with formula errors - Working with the rust_xlsxwriter library</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">rust_xlsxwriter</a></li><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../getting_stared.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="../tutorial/intro.html"><strong aria-hidden="true">2.</strong> Tutorial</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tutorial/tutorial1.html"><strong aria-hidden="true">2.1.</strong> Adding data to a worksheet</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial2.html"><strong aria-hidden="true">2.2.</strong> Adding some formatting</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial3.html"><strong aria-hidden="true">2.3.</strong> Adding dates and more formatting</a></li></ol></li><li class="chapter-item expanded "><a href="../workbook/intro.html"><strong aria-hidden="true">3.</strong> The Workbook struct</a></li><li class="chapter-item expanded "><a href="../worksheet/intro.html"><strong aria-hidden="true">4.</strong> The Worksheet struct</a></li><li class="chapter-item expanded "><a href="../format/intro.html"><strong aria-hidden="true">5.</strong> The Format struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../format/creating.html"><strong aria-hidden="true">5.1.</strong> Creating and using a Format object</a></li><li class="chapter-item expanded "><a href="../format/defaults.html"><strong aria-hidden="true">5.2.</strong> Format defaults</a></li><li class="chapter-item expanded "><a href="../format/methods.html"><strong aria-hidden="true">5.3.</strong> Format methods</a></li><li class="chapter-item expanded "><a href="../format/colors.html"><strong aria-hidden="true">5.4.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="../format/categories.html"><strong aria-hidden="true">5.5.</strong> Number Format Categories</a></li><li class="chapter-item expanded "><a href="../format/locals.html"><strong aria-hidden="true">5.6.</strong> Number Formats in different Locals</a></li></ol></li><li class="chapter-item expanded "><a href="../formulas/intro.html"><strong aria-hidden="true">6.</strong> Working with Formulas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../formulas/results.html"><strong aria-hidden="true">6.1.</strong> Formula Results</a></li><li class="chapter-item expanded "><a href="../formulas/syntax.html"><strong aria-hidden="true">6.2.</strong> Non US Excel functions and syntax</a></li><li class="chapter-item expanded "><a href="../formulas/dynamic_arrays.html"><strong aria-hidden="true">6.3.</strong> Dynamic Array support</a></li><li class="chapter-item expanded "><a href="../formulas/future_functions.html"><strong aria-hidden="true">6.4.</strong> Formulas added in Excel 2010 and later</a></li><li class="chapter-item expanded "><a href="../formulas/errors.html"><strong aria-hidden="true">6.5.</strong> Dealing with formula errors</a></li></ol></li><li class="chapter-item expanded "><a href="../examples/intro.html"><strong aria-hidden="true">7.</strong> Cookbook Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../examples/hello_world.html"><strong aria-hidden="true">7.1.</strong> Hello World</a></li><li class="chapter-item expanded "><a href="../examples/demo.html"><strong aria-hidden="true">7.2.</strong> Feature demo</a></li><li class="chapter-item expanded "><a href="../examples/formatting.html"><strong aria-hidden="true">7.3.</strong> Cell formatting</a></li><li class="chapter-item expanded "><a href="../examples/colors.html"><strong aria-hidden="true">7.4.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="../examples/right_to_left.html" class="active"><strong aria-hidden="true">7.5.</strong> Right to left display</a></li><li class="chapter-item expanded "><a href="../examples/dynamic_arrays.html"><strong aria-hidden="true">7.6.</strong> Dynamic array formulas</a></li></ol></li><li class="chapter-item expanded "><a href="../performance.html"><strong aria-hidden="true">8.</strong> Performance</a></li><li class="chapter-item expanded "><a href="../changelog.html"><strong aria-hidden="true">9.</strong> Release Notes</a></li><li class="chapter-item expanded "><a href="../license.html"><strong aria-hidden="true">10.</strong> License</a></li><li class="chapter-item expanded "><a href="../author.html"><strong aria-hidden="true">11.</strong> Author</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">rust_xlsxwriter</a></li><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../getting_stared.html"><strong aria-hidden="true">1.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="../tutorial/intro.html"><strong aria-hidden="true">2.</strong> Tutorial</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tutorial/tutorial1.html"><strong aria-hidden="true">2.1.</strong> Adding data to a worksheet</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial2.html"><strong aria-hidden="true">2.2.</strong> Adding some formatting</a></li><li class="chapter-item expanded "><a href="../tutorial/tutorial3.html"><strong aria-hidden="true">2.3.</strong> Adding dates and more formatting</a></li></ol></li><li class="chapter-item expanded "><a href="../workbook/intro.html"><strong aria-hidden="true">3.</strong> The Workbook struct</a></li><li class="chapter-item expanded "><a href="../worksheet/intro.html"><strong aria-hidden="true">4.</strong> The Worksheet struct</a></li><li class="chapter-item expanded "><a href="../format/intro.html"><strong aria-hidden="true">5.</strong> The Format struct</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../format/creating.html"><strong aria-hidden="true">5.1.</strong> Creating and using a Format object</a></li><li class="chapter-item expanded "><a href="../format/defaults.html"><strong aria-hidden="true">5.2.</strong> Format defaults</a></li><li class="chapter-item expanded "><a href="../format/methods.html"><strong aria-hidden="true">5.3.</strong> Format methods</a></li><li class="chapter-item expanded "><a href="../format/colors.html"><strong aria-hidden="true">5.4.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="../format/categories.html"><strong aria-hidden="true">5.5.</strong> Number Format Categories</a></li><li class="chapter-item expanded "><a href="../format/locals.html"><strong aria-hidden="true">5.6.</strong> Number Formats in different Locals</a></li></ol></li><li class="chapter-item expanded "><a href="../formulas/intro.html"><strong aria-hidden="true">6.</strong> Working with Formulas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../formulas/results.html"><strong aria-hidden="true">6.1.</strong> Formula Results</a></li><li class="chapter-item expanded "><a href="../formulas/syntax.html"><strong aria-hidden="true">6.2.</strong> Non US Excel functions and syntax</a></li><li class="chapter-item expanded "><a href="../formulas/dynamic_arrays.html"><strong aria-hidden="true">6.3.</strong> Dynamic Array support</a></li><li class="chapter-item expanded "><a href="../formulas/future_functions.html"><strong aria-hidden="true">6.4.</strong> Formulas added in Excel 2010 and later</a></li><li class="chapter-item expanded "><a href="../formulas/errors.html" class="active"><strong aria-hidden="true">6.5.</strong> Dealing with formula errors</a></li></ol></li><li class="chapter-item expanded "><a href="../examples/intro.html"><strong aria-hidden="true">7.</strong> Cookbook Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../examples/hello_world.html"><strong aria-hidden="true">7.1.</strong> Hello World</a></li><li class="chapter-item expanded "><a href="../examples/demo.html"><strong aria-hidden="true">7.2.</strong> Feature demo</a></li><li class="chapter-item expanded "><a href="../examples/formatting.html"><strong aria-hidden="true">7.3.</strong> Cell formatting</a></li><li class="chapter-item expanded "><a href="../examples/colors.html"><strong aria-hidden="true">7.4.</strong> Format colors</a></li><li class="chapter-item expanded "><a href="../examples/right_to_left.html"><strong aria-hidden="true">7.5.</strong> Right to left display</a></li><li class="chapter-item expanded "><a href="../examples/dynamic_arrays.html"><strong aria-hidden="true">7.6.</strong> Dynamic array formulas</a></li></ol></li><li class="chapter-item expanded "><a href="../performance.html"><strong aria-hidden="true">8.</strong> Performance</a></li><li class="chapter-item expanded "><a href="../changelog.html"><strong aria-hidden="true">9.</strong> Release Notes</a></li><li class="chapter-item expanded "><a href="../license.html"><strong aria-hidden="true">10.</strong> License</a></li><li class="chapter-item expanded "><a href="../author.html"><strong aria-hidden="true">11.</strong> Author</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -142,66 +142,59 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="right-to-left-display"><a class="header" href="#right-to-left-display">Right to left display</a></h1>
-<p>Example of using rust_xlsxwriter to create a workbook with the default worksheet
-and cell text direction changed from left-to-right to right-to-left, as required
-by some middle eastern versions of Excel.</p>
-<p><img src="../../images/worksheet_set_right_to_left.png" alt="Image of output from app_right_to_left.rs" /></p>
-<pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
-</span><span class="boring">// Copyright 2022, John McNamara, jmcnamara@cpan.org
-</span><span class="boring">
-</span><span class="boring">//! Example of using rust_xlsxwriter to create a workbook with the default
-</span><span class="boring">//! worksheet and cell text direction changed from left-to-right to
-</span><span class="boring">//! right-to-left, as required by some middle eastern versions of Excel.
-</span>
-use rust_xlsxwriter::{Format, Workbook, XlsxError};
+                        <h1 id="dealing-with-formula-errors"><a class="header" href="#dealing-with-formula-errors">Dealing with formula errors</a></h1>
+<p>If there is an error in the syntax of a formula it is usually displayed in Excel
+as <code>#NAME?</code>. Alternatively you may get a warning from Excel when the file is
+loaded. If you encounter an error like this you can debug it using the following
+steps:</p>
+<ol>
+<li>
+<p>Ensure the formula is valid in Excel by copying and pasting it into a cell.
+Note, this should be done in Excel and <strong>not</strong> other applications such as
+OpenOffice or LibreOffice since they may have slightly different syntax.</p>
+</li>
+<li>
+<p>Ensure the formula is using comma separators instead of semi-colons, see <a href="syntax.html">Non
+US Excel functions and syntax</a>.</p>
+</li>
+<li>
+<p>Ensure the formula is in English, see <a href="syntax.html">Non US Excel functions and
+syntax</a>.</p>
+</li>
+<li>
+<p>Ensure that the formula doesn't contain an Excel 2010+ future function, see
+<a href="future_functions.html">Formulas added in Excel 2010 and later</a>. If it does
+then ensure that the correct prefix is used.</p>
+</li>
+<li>
+<p>If the function loads in Excel but appears with one or more <code>@</code> symbols added
+then it is probably an array function and should be written using
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_array_formula"><code>worksheet.write_array_formula()</code></a> or
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_dynamic_array_formula"><code>worksheet.write_dynamic_array_formula()</code></a> (see also <a href="dynamic_arrays.html">Dynamic Array
+support</a>).</p>
+</li>
+</ol>
+<p>Finally if you have completed all the previous steps and still get a <code>#NAME?</code>
+error you can examine a valid Excel file to see what the correct syntax should
+be. To do this you should create a valid formula in Excel and save the file. You
+can then examine the XML in the unzipped file.</p>
+<p>The following shows how to do that using Linux <code>unzip</code> and libxml's
+<a href="http://xmlsoft.org/xmllint.html">xmllint</a> to format the XML for clarity:</p>
+<pre><code class="language-bash">    $ unzip myfile.xlsx -d myfile
+    $ xmllint --format myfile/xl/worksheets/sheet1.xml | grep '&lt;/f&gt;'
 
-fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    // Create a new Excel file.
-    let mut workbook = Workbook::new(&quot;right_to_left.xlsx&quot;);
-
-    // Add the cell formats.
-    let format_left_to_right = Format::new().set_reading_direction(1);
-    let format_right_to_left = Format::new().set_reading_direction(2);
-
-    // Add a worksheet in the standard left to right direction.
-    let worksheet1 = workbook.add_worksheet();
-
-    // Make the column wider for clarity.
-    worksheet1.set_column_width(0, 25)?;
-
-    // Standard direction:         | A1 | B1 | C1 | ...
-    worksheet1.write_string_only(0, 0, &quot;نص عربي / English text&quot;)?;
-    worksheet1.write_string(1, 0, &quot;نص عربي / English text&quot;, &amp;format_left_to_right)?;
-    worksheet1.write_string(2, 0, &quot;نص عربي / English text&quot;, &amp;format_right_to_left)?;
-
-    // Add a worksheet and change it to right to left direction.
-    let worksheet2 = workbook.add_worksheet();
-    worksheet2.set_right_to_left();
-
-    // Make the column wider for clarity.
-    worksheet2.set_column_width(0, 25)?;
-
-    // Right to left direction:    ... | C1 | B1 | A1 |
-    worksheet2.write_string_only(0, 0, &quot;نص عربي / English text&quot;)?;
-    worksheet2.write_string(1, 0, &quot;نص عربي / English text&quot;, &amp;format_left_to_right)?;
-    worksheet2.write_string(2, 0, &quot;نص عربي / English text&quot;, &amp;format_right_to_left)?;
-
-    workbook.close()?;
-
-    Ok(())
-}
+            &lt;f&gt;SUM(1, 2, 3)&lt;/f&gt;
 </code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../examples/colors.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../formulas/future_functions.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../examples/dynamic_arrays.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../examples/intro.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -211,11 +204,11 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../examples/colors.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../formulas/future_functions.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../examples/dynamic_arrays.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../examples/intro.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
