--- a/print.html
+++ b/print.html
@@ -2413,7 +2413,7 @@ section below.</p>
 <p><img src="formulas/../../images/working_with_formulas2.png" alt="Image of output from doc_working_with_formulas_future2.rs" /></p>
 <p><strong>Note</strong>: The function is displayed by Excel without the prefix.</p>
 <p>Alternatively you can use the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.use_future_functions"><code>worksheet.use_future_functions()</code></a> function to
-have <code>rust_xlsxwriter</code> automatically handle future functions for your:</p>
+have <code>rust_xlsxwriter</code> automatically handle future functions for you:</p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">// Copyright 2022, John McNamara, jmcnamara@cpan.org
 </span><span class="boring">
