--- a/tutorial/tutorial1.html
+++ b/tutorial/tutorial1.html
@@ -228,7 +228,7 @@ filename that we want to create:</p>
 <p><strong>Note</strong>, <code>rust_xlsxwriter</code> can only create new files. It cannot read or modify
 existing files.</p>
 <p>The workbook object is then used to add a new worksheet via the
-[<code>add_worksheet</code>] method:</p>
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.add_worksheet"><code>add_worksheet()</code></a> method:</p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">// Copyright 2022, John McNamara, jmcnamara@cpan.org
 </span><span class="boring">
